Update Catalan translation

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
-﻿; openBVE interface language configuration file
-; last updated: 2017-02-06
+﻿﻿; openBVE interface language configuration file
+; last updated: 2017-09-18
 ; by Marc Riera Irigoyen
 
 [program]
@@ -36,7 +36,7 @@ unknown = Desconegut
 [errors]
 critical_file = S'ha produït un error crític en processar el fitxer [file]
 filesystem_invalid = La configuració del sistema de fitxers és inaccessible o no vàlida per la següent raó:
-warning = Advertència:
+warning = Avís:
 controls_missing = No s'han trobat fitxers de configuració de controls.
 controls_oldversion = S'ha trobat un fitxer antic de configuració de controls.
 controls_reset = S'ha reiniciat la configuració de controls actual als valors per defecte.
@@ -50,9 +50,9 @@ fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla compl
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
 route_corrupt_withtrack = La ruta seleccionada està corrompuda: \r\n No s'ha trobat la secció WithTrack.
 route_corrupt_nostations = La ruta seleccionada està corrompuda: \r\n No s'ha definit cap estació.
-route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
+route_corrupt_noobjects = La ruta seleccionada està corrompuda: \r\n No s'ha definit cap objecte.
 plugin_failure1 = No s'ha pogut carregar l'extensió del tren [plugin]. 
-plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que podrien ser incompatibles.
+plugin_failure2 = Es faran servir els sistemes ATS/ATC per defecte, que podrien ser incompatibles.
 
 [start]
 title = Inicia una nova partida
@@ -287,24 +287,24 @@ assignment_invalid = Sense assignar
 assignment_separator = ,\x20
 
 [raildriver]
-notdetected = No RailDriver conrollers detected.
-config_error = Error loading RailDriver calibration file.
-calibration_start = Please press 'Next' to start calibration.
-calibration_a = Move the reverser lever to the full reverse position and press 'Next'.
-calibration_b = Move the reverser lever to the full forward position and press 'Next'.
-calibration_c = Move the combined brake / throttle lever to the full power position and press 'Next'.
-calibration_d = Move the combined brake / throttle lever to the full brake position and press 'Next'.
-calibration_e = Move the dynamic brake lever to the release position and press 'Next'.
-calibration_f = Move the dynamic brake lever to the emergency position and press 'Next'.
-calibration_g = Move the independant brake lever to the release position and press 'Next'.
-calibration_h = Move the independant brake lever to the full position and press 'Next'.
-calibration_i = Move the bail-off lever to the release position and press 'Next'.
-calibration_j = Move and hold the bail-off lever into the full position and press 'Next'.
-calibration_k = Move the wiper switch to OFF and press 'Next'.
-calibration_l = Move the wiper switch to FULL and press 'Next'.
-calibration_m = Move the lights switch to OFF and press 'Next'.
-calibration_n = Move the lights switch to FULL and press 'Next'.
-calibration_o = Calibration complete.
+notdetected = No s'ha detectat cap dispositiu RailDriver.
+config_error = S'ha produït un error en carregar el fitxer de calibratge de RailDriver.
+calibration_start = Seleccioneu "Següent" per començar el calibratge.
+calibration_a = Moveu la palanca de l'inversor a la posició màxima de marxa enrere i seleccioneu "Següent".
+calibration_b = Moveu la palanca de l'inversor a la posició màxima de marxa endavant i seleccioneu "Següent".
+calibration_c = Moveu el regulador combinat a la posició màxima de tracció i seleccioneu "Següent".
+calibration_d = Moveu el regulador combinat a la posició màxima de fre i seleccioneu "Següent".
+calibration_e = Moveu la palanca de fre dinàmic a la posició d'alliberament i seleccioneu "Següent".
+calibration_f = Moveu la palanca de fre dinàmic a la posició d'emergència i seleccioneu "Següent".
+calibration_g = Moveu la palanca de fre independent a la posició d'alliberament i seleccioneu "Següent".
+calibration_h = Moveu la palanca de fre independent a la posició màxima de fre i seleccioneu "Següent".
+calibration_i = Moveu la palanca d'alliberament de frens a la posició d'alliberament i seleccioneu "Següent".
+calibration_j = Moveu i aguanteu la palanca d'alliberament de frens a la posició màxima de fre i seleccioneu "Següent".
+calibration_k = Desactiveu l'interruptor de l'eixugaparabrisa i seleccioneu "Següent".
+calibration_l = Activeu l'interruptor de l'eixugaparabrisa i seleccioneu "Següent".
+calibration_m = Desactiveu l'interruptor dels fars i seleccioneu "Següent".
+calibration_n = Activeu l'interruptor dels fars i seleccioneu "Següent".
+calibration_o = S'ha completat el calibratge.
 
 [options]
 title = Configuració
@@ -451,7 +451,7 @@ station_depart_closedoors = Embarcament completat. Ara podeu tancar les portes.
 station_depart = Embarcament completat.
 station_passed = No us heu aturat a [name].
 station_passed_boarding = Heu passat [name] amb les portes obertes. Atureu-vos immediatament.
-loading = Carregant. Espereu, si us plau...
+loading = Carregant. Espereu un moment...
 
 [notification]
 interior = Càmera interior
