Update ja-JA and zh-CN translations

--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2017-05-07
+; last updated: 2017-09-16
 ; by  F81_tec200, Midnight Express Ginga81(ginga81)
 
 [program]
@@ -288,24 +288,25 @@ assignment_invalid = 未割当
 assignment_separator = ,\x20
 
 [raildriver]
-notdetected = No RailDriver conrollers detected.
-config_error = Error loading RailDriver calibration file.
-calibration_start = Please press 'Next' to start calibration.
-calibration_a = Move the reverser lever to the full reverse position and press 'Next'.
-calibration_b = Move the reverser lever to the full forward position and press 'Next'.
-calibration_c = Move the combined brake / throttle lever to the full power position and press 'Next'.
-calibration_d = Move the combined brake / throttle lever to the full brake position and press 'Next'.
-calibration_e = Move the dynamic brake lever to the release position and press 'Next'.
-calibration_f = Move the dynamic brake lever to the emergency position and press 'Next'.
-calibration_g = Move the independant brake lever to the release position and press 'Next'.
-calibration_h = Move the independant brake lever to the full position and press 'Next'.
-calibration_i = Move the bail-off lever to the release position and press 'Next'.
-calibration_j = Move and hold the bail-off lever into the full position and press 'Next'.
-calibration_k = Move the wiper switch to OFF and press 'Next'.
-calibration_l = Move the wiper switch to FULL and press 'Next'.
-calibration_m = Move the lights switch to OFF and press 'Next'.
-calibration_n = Move the lights switch to FULL and press 'Next'.
-calibration_o = Calibration complete.
+
+notdetected = RailDriverのコントローラーを検出できませんでした。
+config_error = RailDriverのキャリブレーションファイルの読み込み中にエラーが発生しました。
+calibration_start = 「次へ」をクリックするとキャリブレーションを開始します。.
+calibration_a = 逆転器をREVERSEの位置に動かしてから「次へ」をクリックしてください。
+calibration_b = 逆転器をFORWARDの位置に動かしてから「次へ」をクリックしてください。
+calibration_c = スロットルレバーをFULL(出力側)の位置にしてから「次へ」をクリックしてください。
+calibration_d = スロットルレバーをFULL(ブレーキ側)の位置にしてから「次へ」をクリックしてください。
+calibration_e = 自弁ブレーキレバーをRELEASEの位置にしてから「次へ」をクリックしてください。
+calibration_f = 自弁ブレーキレバーをEMERGENCYの位置にしてから「次へ」をクリックしてください。
+calibration_g = 単弁ブレーキレバーをRELEASEの位置にしてから「次へ」をクリックしてください。
+calibration_h = 単弁ブレーキレバーをFULLの位置にしてから「次へ」をクリックしてください。
+calibration_i = Bail-off レバーをRELEASEにした状態を保って「次へ」をクリックしてください。
+calibration_j = Bail-off レバーをFULLにした状態を保って「次へ」をクリックしてください。
+calibration_k = ワイパースイッチをOFFにしてから「次へ」をクリックしてください。
+calibration_l = ワイパースイッチをFULLにしてから「次へ」をクリックしてください。
+calibration_m = 前照灯スイッチをOFFにしてから「次へ」をクリックしてください。
+calibration_n = 前照灯スイッチをFULLにしてから「次へ」をクリックしてください。
+calibration_o = キャリブレーションが完了しました。
 
 [options]
 title = オプション
