--- a/installers/debian/DEBIAN/control
+++ b/installers/debian/DEBIAN/control
@@ -6,7 +6,7 @@ Maintainer: leezer3 <leezer3@gmail.com>
 Architecture: all
 Version: 1.5.1.5
 Provides: bve-engine
-Depends: mono-runtime (>= 3.2.8), libmono-corlib4.5-cil (>= 3.2.8), libmono-system-drawing4.0-cil (>= 1.0), libmono-system-windows-forms4.0-cil (>= 1.0), libmono-system4.0-cil (>= 3.2.8), libmono-i18n4.0-all
+Depends: mono-runtime (>= 3.2.8), libmono-corlib4.5-cil (>= 3.2.8), libmono-system-drawing4.0-cil (>= 1.0), libmono-system-windows-forms4.0-cil (>= 1.0), libmono-system4.0-cil (>= 3.2.8), libmono-i18n4.0-all, libopenal1
 Recommends: bve-route, bve-train
 Description: realistic 3D train/railway simulator (main program)
 Homepage: http://openbve-project.net
