--- a/source/CarXMLConvertor/CarXMLConvertor.csproj
+++ b/source/CarXMLConvertor/CarXMLConvertor.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabbedList.cs" />
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
