--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Parsers\SoundConfiguration\SoundCfg.Bve4.cs" />
     <Compile Include="Parsers\SoundConfiguration\SoundCfg.Xml.cs" />
     <Compile Include="Parsers\Train\TrainDatParser.Formats.cs" />
+    <Compile Include="Parsers\Train\TrainXmlParser.CarNode.cs" />
     <Compile Include="Parsers\Train\TrainXmlParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <AutoGen>True</AutoGen>
