--- a/source/RouteViewer/RouteViewer.csproj
+++ b/source/RouteViewer/RouteViewer.csproj
@@ -98,9 +98,16 @@
     <Compile Include="Renderer.Primitives.cs" />
     <Compile Include="Renderer.Strings.cs" />
     <Compile Include="RendererR.cs" />
-    <Compile Include="SoundManager.cs" />
+    <Compile Include="Audio\Sounds.Convert.cs" />
+    <Compile Include="Audio\Sounds.cs" />
+    <Compile Include="Audio\Sounds.SoundBuffer.cs" />
+    <Compile Include="Audio\Sounds.SoundOrigin.cs" />
+    <Compile Include="Audio\Sounds.SoundSource.cs" />
+    <Compile Include="Audio\Sounds.Update.cs" />
     <Compile Include="System\FileSystem.cs" />
+    <Compile Include="System\Functions\Plugins.cs" />
     <Compile Include="System\Gamewindow.cs" />
+    <Compile Include="System\Host.cs" />
     <Compile Include="TextureManager.cs" />
     <Compile Include="ProgramR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
