Change: Fix MSBuild workers on Travis
Attempted fix..

--- a/source/ObjectBender/ObjectBender.csproj
+++ b/source/ObjectBender/ObjectBender.csproj
@@ -46,7 +46,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
