--- a/source/Plugins/Texture.Ace/Texture.Ace.csproj
+++ b/source/Plugins/Texture.Ace/Texture.Ace.csproj
@@ -48,7 +48,7 @@
     <OutputPath>..\..\..\bin_release\Data\Plugins\</OutputPath>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
