New: Add events overlay to main program
https://github.com/leezer3/OpenBVE/pull/165

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activa o desactiva el mode de malla (wireframe)
 DEBUG_NORMALS = Mostra o oculta les normals dels vèrtexs
 DEBUG_BRAKE = Mostra o oculta el sistema de fre
 ROUTE_INFORMATION = Mostra o oculta la finestra d'informació de la ruta
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
