--- a/assets/Languages/cs-CZ.cfg
+++ b/assets/Languages/cs-CZ.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activace/deaktivace zobrazení síťového modelu
 DEBUG_NORMALS = Zobrazit/skrýt normálové vektory
 DEBUG_BRAKE = Zobrazit/skrýt stav brzd
 ROUTE_INFORMATION = Zobrazit/skrýt okno informací o trati
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
