--- a/assets/Languages/de-CH.cfg
+++ b/assets/Languages/de-CH.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Aktiviert/Deaktiviert Wireframe-Darstellung
 DEBUG_NORMALS = Zeigt/Versteckt die Anzeige der Normalenvektoren
 DEBUG_BRAKE = Zeigt/Versteckt die Debug-Anzeige für die Bremsen
 ROUTE_INFORMATION = Zeigt/versteckt das Infofenster
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
