--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activa/desactiva el modo malla (wireframe)
 DEBUG_NORMALS = Muestra/esconde las normales de los vértices
 DEBUG_BRAKE = Muestra/esconde el sistema de frenado
 ROUTE_INFORMATION = Muestra u oculta la ventana de información de la ruta
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
