--- a/assets/Languages/fr-FR.cfg
+++ b/assets/Languages/fr-FR.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Active/désactive la représentation en fil de fer
 DEBUG_NORMALS = Active/désactive l'affichage des normales des vertex
 DEBUG_BRAKE = Active/désactive l'affichage des informations de débogage du système de freinage
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
