--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Wireframe mód be/ki kapcsolása
 DEBUG_NORMALS = Normálvektorok megjelenítése/elrejtése
 DEBUG_BRAKE = A fékrendszer hibakereső adatainak megjelenítése/elrejtése
 ROUTE_INFORMATION = Megjeleníti vagy elrejti a pályainformációs ablakot
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
