--- a/assets/Languages/it-IT.cfg
+++ b/assets/Languages/it-IT.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Attiva / disattiva la modalità wireframe
 DEBUG_NORMALS = Visualizza / nasconde l'indicazione delle normali
 DEBUG_BRAKE = Visualizza / nasconde lo stato del sistema frenante
 ROUTE_INFORMATION = Visualizza / nasconde la finestra delle informazioni sulla linea
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
