--- a/assets/Languages/nl-NL.cfg
+++ b/assets/Languages/nl-NL.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activeert of deaciveert draadrastermodus
 DEBUG_NORMALS = Laat vertex normals zien of verbergt deze
 DEBUG_BRAKE = Laat remsysteem debug output zien of verberg deze
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
