--- a/assets/Languages/pl-PL.cfg
+++ b/assets/Languages/pl-PL.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Aktywacja/Dezaktywacja sitaki
 DEBUG_NORMALS = Pokaz/Ukryj vertexy
 DEBUG_BRAKE = Pokaz/ukryj system hamulców
 ROUTE_INFORMATION = Pokazuje/ukrywa okienko z informacjami
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
