--- a/assets/Languages/pt-BR.cfg
+++ b/assets/Languages/pt-BR.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Ativa ou desativa o modo "wireframe"
 DEBUG_NORMALS = Mostra ou esconde a posição dos "vertex"
 DEBUG_BRAKE = Mostra ou esconde o estado do sistema de freagem
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
