--- a/assets/Languages/pt-PT.cfg
+++ b/assets/Languages/pt-PT.cfg
@@ -654,6 +654,7 @@ DEBUG_WIREFRAME = Activa ou desactiva o modo "vêr grelha"
 DEBUG_NORMALS = Mostra ou esconde a posição dos "vértices"
 DEBUG_BRAKE = Mostra ou esconde o estado do sistema de travagem
 ROUTE_INFORMATION = Mostra ou esconde a janela de informação da linha
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
