--- a/assets/Languages/ru-RU.cfg
+++ b/assets/Languages/ru-RU.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Включить/выключить сеточный вид
 DEBUG_NORMALS = Включить/выключить отображение нормалей
 DEBUG_BRAKE = Включить/выключить отображение отладочного режима тормозной системы
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
