--- a/assets/Languages/uk-UA.cfg
+++ b/assets/Languages/uk-UA.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Активація/Деактивація каркасу
 DEBUG_NORMALS = Показати/сховати вертекси
 DEBUG_BRAKE = Показати/сховати систему гальм
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
