--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -655,6 +655,7 @@ DEBUG_WIREFRAME = 切换线框描绘
 DEBUG_NORMALS = 切换顶点法线
 DEBUG_BRAKE = 切换制动调试信息
 ROUTE_INFORMATION = 切换线路信息
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ 新增控制项 ----
 
