--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activates or deactivates wireframe mode
 DEBUG_NORMALS = Shows or hides vertex normals
 DEBUG_BRAKE = Shows or hides brake system debug output
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
