--- a/assets/Languages/fi-FI.cfg
+++ b/assets/Languages/fi-FI.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Aktivoi tai poistaa wireframe-tilan
 DEBUG_NORMALS = Näyttää tai piilottaa vikanäytön
 DEBUG_BRAKE = Näyttää tai piilottaa jarrujärjestelmän viat
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
