--- a/assets/Languages/ro-RO.cfg
+++ b/assets/Languages/ro-RO.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = Activează sau dezactivează modul Wireframe
 DEBUG_NORMALS = Afisează sau ascunde colţurile normale.
 DEBUG_BRAKE = Afişează sau ascunde interfaţa sistemului de frânare.
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
