--- a/assets/Languages/zh-HK.cfg
+++ b/assets/Languages/zh-HK.cfg
@@ -650,6 +650,7 @@ DEBUG_WIREFRAME = 啟動或關閉線框描繪
 DEBUG_NORMALS = 顯示或隱藏頂點法線
 DEBUG_BRAKE = 顯示或隱藏制動系統除錯輸出
 ROUTE_INFORMATION = Shows or hides the route information window
+SHOW_EVENTS = Shows or hides event markers (For developers)
 
 ;------ New controls ----
 
