--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Parsers\Train\TrainDatParser.Formats.cs" />
     <Compile Include="Parsers\Train\TrainXmlParser.CarNode.cs" />
     <Compile Include="Parsers\Train\TrainXmlParser.cs" />
+    <Compile Include="Parsers\Train\TrainXmlParser.Performance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
