Change: Separate SignalData from route parser lump

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Objects.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.PreprocessOptions.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.RouteFixes.cs" />
+    <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.SignalData.cs" />
     <Compile Include="Parsers\Route\BVE\CsvRwRouteParser.Structures.cs" />
     <Compile Include="Parsers\Script\StationXMLParser.cs" />
     <Compile Include="Parsers\Script\DynamicBackgroundParser.cs" />
