New: Implement destination variable for trains

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Game\Events\EventTypes\SpeedLimit.cs" />
     <Compile Include="Game\Events\EventTypes\Station.cs" />
     <Compile Include="Game\Events\EventTypes\TrackEnd.cs" />
+    <Compile Include="Game\Events\EventTypes\DestinationChange.cs" />
     <Compile Include="Game\Events\EventTypes\Transponder.cs" />
     <Compile Include="Game\Markers.cs" />
     <Compile Include="Game\MessageManager.cs" />
