--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,3 +23,9 @@ before_build:
 
 build:
 	project: C:\projects\OpenBVE\OpenBVE.sln
+
+notifications:
+	- provider: email
+    on_build_success: false
+    on_build_failure: false
+    on_build_status_changed: false
