--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ build:
   project: C:\projects\OpenBVE\OpenBVE.sln
 
 notifications:
-  - provider: email
+  - provider: Email
     on_build_success: false
     on_build_failure: false
     on_build_status_changed: false
