--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,8 +24,8 @@ before_build:
 build:
   project: C:\projects\OpenBVE\OpenBVE.sln
 
-on_success:
-  - cmd: "C:\\Program Files (x86)\\Inno Setup 5\\iss.exe" /q C:\projects\OpenBVE\installers\windows\openbve.iss
+after_build: 
+  - cmd: "\"C:/Program Files (x86)/Inno Setup 5/iss.exe\" /q C:/projects/OpenBVE/installers/windows/openbve.iss"
 
 notifications:
   - provider: Email
