--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 version: '1.5.3.2-{build}'
 
 image: 
-  - Visual Studio 2013
-  - Visual Studio 2015
   - Visual Studio 2017
+  - Visual Studio 2015
+  - Visual Studio 2013
 
 platform:
   - x86
@@ -24,9 +24,8 @@ before_build:
 build:
   project: C:\projects\OpenBVE\OpenBVE.sln
 
-after_build: 
-  - cmd: "dir \"C:/Program Files (x86)/Inno Setup 5/\""
-  - cmd: "\"C:/Program Files (x86)/Inno Setup 5/iscc.exe\" /q C:/projects/OpenBVE/installers/windows/openbve.iss"
+after_build:
+  - cmd: "if \"%CONFIGURATION%\"==\"Release\" if \"%APPVEYOR_BUILD_WORKER_IMAGE%\"==\"Visual Studio 2017\" \"C:/Program Files (x86)/Inno Setup 5/iscc.exe\" /q C:/projects/OpenBVE/installers/windows/openbve.iss"
 
 notifications:
   - provider: Email
