--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ build:
   project: C:\projects\OpenBVE\OpenBVE.sln
 
 after_build:
+  - cmd: "if \"%CONFIGURATION%\"==\"Release\" if \"%APPVEYOR_BUILD_WORKER_IMAGE%\"==\"Visual Studio 2017\" if \"%APPVEYOR_REPO_TAG%\" == \"true\" \"powershell C:/projects/OpenBVE/WindowsInstaller.ps1 \"%APPVEYOR_REPO_TAG_NAME%\"\""
   - cmd: "if \"%CONFIGURATION%\"==\"Release\" if \"%APPVEYOR_BUILD_WORKER_IMAGE%\"==\"Visual Studio 2017\" \"C:/Program Files (x86)/Inno Setup 5/iscc.exe\" /q C:/projects/OpenBVE/installers/windows/openbve.iss"
 
 notifications:
